<resources>
    <string name="app_name">responsiRehan</string>
    <string name="title_home">Home</string>
    <string name="title_payment">Payment</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="txt_login_now">LOGIN NOW</string>
    <string name="title_login">LOGIN</string>
    <string name="title_register">REGISTER</string>
    <string name="title_nav_home">Home</string>
    <string name="title_nav_category">Category</string>
    <string name="title_nav_favorite">Favorite</string>
    <string name="edt_name">Name</string>
    <string name="edt_email">Email</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="edt_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_send">SEND</string>
    <string name="forgot_message">Enter the email that used during registration.</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>