<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.responsiRehan.responsiFintech.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.responsiRehan.responsiFintech.fragment.PaymentFragment"
        android:label="@string/title_payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.responsiRehan.responsiFintech.fragment.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.responsiRehan.responsiFintech.fragment.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>