<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/olshop"
                app:riv_corner_radius="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/title_login"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:hint="@string/edt_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:hint="@string/edt_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/txt_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorRipple"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="207dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/bg_bar"
                android:text="@string/btn_login"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </com.balysv.materialripple.MaterialRippleLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/do_not_have_account" />

        <Button
            android:id="@+id/textViewCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/register_now"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>