<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:paddingRight="@dimen/spacing_middle"
        android:paddingEnd="@dimen/spacing_middle"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_scrollFlags="scroll|enterAlways">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ic_baseline_subdirectory_arrow_left_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/title_toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Register"
                        android:textStyle="bold"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:textColor="@color/colorWhite"
                        android:maxLines="1"
                        android:ellipsize="end" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lyt_bottom">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_centerInParent="true">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_notification_large"
                    app:riv_corner_radius="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/title_register"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_edt_name"
                        android:drawableStart="@drawable/ic_edt_name"
                        android:drawablePadding="12dp"
                        android:hint="@string/edt_name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_edt_email"
                        android:drawableStart="@drawable/ic_edt_email"
                        android:drawablePadding="12dp"
                        android:hint="@string/edt_email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_edt_password"
                        android:drawableStart="@drawable/ic_edt_password"
                        android:drawablePadding="12dp"
                        android:hint="@string/edt_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/colorRipple"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/buttonRegister"
                        android:layout_width="217dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_bar"
                        android:text="@string/btn_register"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical">



                </LinearLayout>

            </LinearLayout>



    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lyt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/already_have_account" />

        <Button
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/txt_login_now"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>